# pseudo-light-switch

./: .gitignore  LICENSE  PLAN.md  README.md  hacs.json  info.md  pyproject.toml
custom_components/pseudo_light_switch/: __init__.py  config_flow.py  const.py  light.py  manifest.json
