[project]
name = "pseudo-light-switch"
version = "1.0.0"
description = "Pseudo Light Switch custom integration for Home Assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14.2"

[dependency-groups]
dev = [
    "homeassistant>=2026.6.3",
    "ruff>=0.14",
    "ty",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
